--- a/src/app/modulos/agendamento/agendamento-list-final/agendamento-list-final.component.html
+++ b/src/app/modulos/agendamento/agendamento-list-final/agendamento-list-final.component.html
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class="form-row col-md-12 mt-3">
-			<label style="color: green; font-weight: bold; font-size: 12pt;">ESCOLHA O DIA E A UNIDADE DE SUA PREFERÊNCIA</label><br/>
+			<label style="color: green; font-weight: bold; font-size: 12pt;">ESCOLHA O DIA SERVIÇO E PRIORIDADE DO ATENDIMENTO</label><br/>
 				<div class="form-row col-md-12">
             <div class="form-group col-md-3" >
                 <label for="calendario">Serviço:</label>
