--- a/src/app/modulos/agendamento/agendamento-senha/agendamento-senha.component.html
+++ b/src/app/modulos/agendamento/agendamento-senha/agendamento-senha.component.html
@@ -5,12 +5,12 @@
               <div style="font-size: 12pt; font-weight: bold; text-align:center;">
                   Secretaria Municipal de Finanças <br/> 
                   Assessoria de Tecnologia da Informação<br/>
-                  e-AtendeFácil - Sistema de Agendamento on-line.
+                  e-AtendeFácil - Sistema de Agendamento online.
               </div>	
           </div>	
       </div>
     <div class=" h4 col-md d-flex justify-content-center">  
-          <b><u>Comprovanete de Agendamento</u></b>
+          <b><u>Comprovante de Agendamento</u></b>
        </div>
   </div>
   <div>
