--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,17 @@
 <div class="col-12">
-    <header class="text-white d-flex" style="box-shadow: 1px 1px 5px #000;">
+    <header class="text-white d-flex" style="box-shadow: 1px 1px 1px #000;">
             <div class="d-flex align-items-center col-12" style="font-size: 14pt; font-weight: bold;">
-            <img src="assets/atende_facil.jpg" id="logo" style="height: 70px; width: 70px; margin-left: -10px; border-radius: 100%;" alt="Prefeitura de Goiânia"/>
+            <img src="assets/atende_facil.jpg" id="logo" style="height: 60px; width: 60px; margin-left: -10px; border-radius: 100%;" alt="Prefeitura de Goiânia"/>
               <div class="col-6">
                 {{title}}
                 </div>
                 <nav class="d-flex justify-content-end col-5">
-                  ATI
+                  SEFIN/ATI
                 </nav>
             </div>
      </header>
     <div class="col-12"> 
-      <section style="min-height: 850px">
+      <section style="min-height: 830px">
             <div>
                 <main class="col-md-12">
                     <h1 class="h6 mt-2" style="text-align: center;">
