--- a/src/app/modulos/login/login-form/login-form.component.html
+++ b/src/app/modulos/login/login-form/login-form.component.html
@@ -1,7 +1,7 @@
 <div class="col-12">
     <div class="row mb-4">
       <div class="col-md">
-        <h1 class="h5 border-left pl-2" style="text-align: center;">
+        <h1 class="h5 pl-2" style="text-align: center;">
           Faça seu login para agendamento aqui.
         </h1>
         </div>
