--- a/src/app/modulos/agendamento/agendamento-list-final/agendamento-list-final.component.html
+++ b/src/app/modulos/agendamento/agendamento-list-final/agendamento-list-final.component.html
@@ -25,7 +25,7 @@
           <div class="form-row col-md-12">
             <div class="col-md-2">
                 <label style="color: blue; font-weight: bold; font-size: 12pt;">Identificador:&#160;</label><span>{{ id }}</span>
-            </div>    
+            </div>
             <div class="col-md-4">
                 <label style="color: blue; font-weight: bold; font-size: 12pt;">Nome:&#160;</label><span>{{ nome }}</span>
             </div>
@@ -33,7 +33,7 @@
                 <label style="color: blue; font-weight: bold; font-size: 12pt;">CPF/CNPJ:&#160;</label><span>{{ formatarPessoas(cpfCnpj) }}</span>
             </div>
             <div class="col-md-3">
-                <label style="color: blue; font-weight: bold; font-size: 12pt;">Telefone:&#160;</label><span>{{ telefone }}</span> 
+                <label style="color: blue; font-weight: bold; font-size: 12pt;">Telefone:&#160;</label><span>{{ telefone }}</span>
             </div>
           </div>
           <div class="form-row col-md-12 border-bottom">
@@ -47,7 +47,7 @@
           <div class="form-row col-md-12">
             <div class="col-md-2">
                 <label style="color: blue; font-weight: bold; font-size: 12pt;">Identificador:&#160;</label><span>{{ id_agendamento }}</span>
-            </div>    
+            </div>
             <div class="col-md-4">
                 <label style="color: blue; font-weight: bold; font-size: 12pt;">Unidade:&#160;</label><span>{{ unidade }}</span>
             </div>
@@ -55,7 +55,7 @@
                 <label style="color: blue; font-weight: bold; font-size: 12pt;">Data:&#160;</label><span>{{ formatarDate(data) }}</span>
             </div>
             <div class="col-md-3">
-                <label style="color: blue; font-weight: bold; font-size: 12pt;">Horário:&#160;</label><span>{{ horario }}</span> 
+                <label style="color: blue; font-weight: bold; font-size: 12pt;">Horário:&#160;</label><span>{{ horario }}</span>
             </div>
           </div>
           <div class="form-row col-md-12 border-bottom">
@@ -72,7 +72,7 @@
             <div class="form-group col-md-3" >
                 <label for="calendario">Serviço:</label>
                 <select  class="form-control" id="calendario" formControlName="detalhamentoServico">
-                    <option value="" selected>Escolha o serviço</option>  
+                    <option value="" selected>Escolha o serviço</option>
                   <option *ngFor="let detalhamentoServico of detalhamentoServicos" [value]="detalhamentoServico.id">{{detalhamentoServico.descricao}}</option>
                 </select>
             </div>
@@ -92,28 +92,29 @@
             <div class="form-group col-md-6 mt-4" style="box-shadow: 5px 5px 10px #000;">
                 <div class="ml-2">
                 <label for="prioridade" style="color: red;"><strong>Atendimento prioritário</strong></label><br/>
-                <span style="font-size: 12px; font-weight: bold;">Em conformidade com a Lei nº 10.048/00 é direito a atendimento prioritário, 
-                        pessoas com necessidades especiais, idosos com idade igual ou superior a 60 (sessenta) anos, gestantes, 
-                        lactantes, pessoas com crianças de colo e obesos em repartições públicas, empresas concessionárias de 
+                <span style="font-size: 12px; font-weight: bold;">Em conformidade com a Lei nº 10.048/00 é direito a atendimento prioritário,
+                        pessoas com necessidades especiais, idosos com idade igual ou superior a 60 (sessenta) anos, gestantes,
+                        lactantes, pessoas com crianças de colo e obesos em repartições públicas, empresas concessionárias de
                         serviços públicos e instituições financeiras. </span>
-                        <br/><br/>
-                </div>		
+                        <br/>
+                    <span style="font-weight: bold; color: red; margin-top: 20px;">OBS.: A escolha da prioridade e de sua inteira responsabilidade, caso não comprovado a mesma, será considerado prioridade normal automaticamente.</span>
+                </div>
             </div>
 				</div>
 			</div>
          <div class="col-md-12">
-                <button type="button" 
-                        class="btn btn-success" 
-                        data-toggle="modal" 
+                <button type="button"
+                        class="btn btn-success"
+                        data-toggle="modal"
                         *ngIf="btn"
-                        data-target="#exampleModal" 
+                        data-target="#exampleModal"
                         [disabled]="!agendForm.valid">
                     <i class="fas fa-list-ol"></i>&#160;Confirmar Agendamento
                 </button>
-                <button type="button" 
-                        class="btn btn-warning" 
+                <button type="button"
+                        class="btn btn-warning"
                         *ngIf="!btn"
-                        data-toggle="modal"  
+                        data-toggle="modal"
                         (click)="imprimir(id_agendamento)"
                         data-target="#exampleModal2" >
                     <i class="fas fa-list-ol"></i>&#160;Imprimir recibo
@@ -137,20 +138,20 @@
             </a>
             </div>
             <div class="modal-body">
-                <div class="card">	
+                <div class="card">
                     <div class="card-header">
                         <div >
                             <strong id="resNome" style="color: Green;"><span>{{ nome }},</span></strong>
-                                Confira com atenção os dados abaixo, e envie seu agendamento! 
+                                Confira com atenção os dados abaixo, e envie seu agendamento!
                         </div>
-                    </div> 
-                </div>  
-                <div class="d-flex justify-content-center" style="color: red; font-weight: bold;">Dica! Imprima seu recibo apos enviar !</div>    
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center" style="color: red; font-weight: bold;">Dica! Imprima seu recibo apos enviar !</div>
                 <div class="col-md-12 mt-2">
                     <div *ngIf ="!btn" style="text-align: center;"  class="col-12 alert alert-success" role="alert">
                       <span> Pedido enviado com sucesso!! </span>
                     </div>
-                  </div>   
+                  </div>
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
