--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,49 +1,49 @@
-<div class="col-12">
+<div>
     <header class="text-white d-flex" style="box-shadow: 1px 1px 1px #000;">
             <div class="d-flex align-items-center col-12" style="font-size: 14pt; font-weight: bold;">
             <img src="assets/atende_facil.jpg" id="logo" style="height: 60px; width: 60px; margin-left: -10px; border-radius: 100%;" alt="Prefeitura de Goiânia"/>
-              <div class="col-6">
+              <div class="col-md-6">
                 {{title}}
                 </div>
-                <nav class="d-flex justify-content-end col-5">
-                  SEFIN/ATI
+                <nav class="d-flex justify-content-end col-md-5">
+                  SICTEC
                 </nav>
             </div>
      </header>
-    <div class="col-12"> 
-      <section style="min-height: 830px">
+    <div style="min-height: 860px">
+      <section>
             <div>
-                <main class="col-md-12">
-                    <h1 class="h6 mt-2" style="text-align: center;">
-                        Secretaria Municipal de Finanças
+                <main>
+                    <h1 class="h5 mt-3 col-md-12" style="text-align: center;">
+                      Secretaria Municipal de Administração
                       </h1>
-                      <h1 class="h6" style="text-align: center;">
-                        Assessoria de Tecnologia da Informação
-                      </h1>
-                    <h4 class="text-center">Bem vindo ao e-AtendeFacil</h4>
-                    <h6 class="text-center mt-1">Sistema Atende Fácil de Agendamento on-line.</h6>
-                    <div class="col-12 d-flex justify-content-center mt-5">
+                    <h5 class="text-center col-md-12">Sistema Atende Fácil de Agendamento.</h5>
+                    <h5 class="text-center col-md-12">Bem vindo ao AtendeFácilWeb.</h5>
+                    <div class="col-md-12 mt-3">
+                      <div class="d-flex justify-content-center mb-2">
                         <button class="btn btn-success" routerLink="/login">
-                            <i class="far fa-edit"></i>&#160; AGENDE SUA VAGA!
-                        </button>&#160;  
+                          <i class="fas fa-door-open"></i>&#160; ACESSE AQUI!
+                        </button>&#160;
+                      </div>
+                      <div class="d-flex justify-content-center">
                         <button type="button" class="btn btn-primary" routerLink="/usuario">
                             <i class="fa fa-id-card-o" aria-hidden="true"></i>&#160; FAÇA SEU CADASTRO
                         </button>
+                      </div>
                     </div>
-                    <div class="container mt-5">
+                    <div class="container mt-4">
                       <router-outlet></router-outlet>
-                    </div> 
+                    </div>
                 </main>
             </div>
         </section>
       </div>
-    <!-- Cabeçalho - Fim -->
-    <!-- Rodape - Inicio -->
-        <footer class="text-white" style="height: 50px; margin-top:2px; box-shadow: 1px 1px 2px #000;">
-            <div class="container">
-                <div class="text-center" style="font-size: 10pt;">
-                   Secretaria de Finanças - Assessoria de Tecnologia da Informação - 2020.
+      <div>
+        <footer class="text-white d-flex justify-content-center align-items-center" style="height: 50px; box-shadow: 1px 1px 2px #000;">
+              <div style="font-size: 10pt; font-weight: bold;">
+                  Secretaria Municipal de Inovação, Ciência e Tecnologia - 2021.
                 </div>
-            </div>
-        </footer>		
+        </footer>
+      </div>
     </div>
+
