--- a/src/app/modulos/agendamento/agendamento-senha/agendamento-senha.component.html
+++ b/src/app/modulos/agendamento/agendamento-senha/agendamento-senha.component.html
@@ -1,20 +1,19 @@
-<div class="container col-md-5" style="box-shadow: 5px 5px 10px #000;">
+<div class="container col-md-5" style="box-shadow: 5px 5px 10px #000; border-radius: 5%;">
     <div class="row mt-4">
-        <div class="mb-4 col-12"> 
+        <div class="mb-4 col-12">
           <div class=" col-12 d-flex justify-content-center mt-3">
               <div style="font-size: 12pt; font-weight: bold; text-align:center;">
-                  Secretaria Municipal de Finanças <br/> 
-                  Assessoria de Tecnologia da Informação<br/>
-                  e-AtendeFácil - Sistema de Agendamento online.
-              </div>	
-          </div>	
+                Secretaria Municipal de Administração <br/>
+                AtendeFácilWeb- Sistema de Agendamento online.
+              </div>
+          </div>
       </div>
-    <div class=" h4 col-md d-flex justify-content-center">  
-          <b><u>Comprovante de Agendamento</u></b>
+    <div class=" h5 col-md-12 text-center">
+          <b><u>COMPROVANTE DE AGENDAMENTO</u></b>
        </div>
   </div>
   <div>
-    <div>	
+    <div>
         <div class="form-group col-12" style="font-size: 10pt;">
             <div class="form-row col-12 d-flex justify-content-center">
                 <span style="font-size: 16pt; font-weight: bold;">SENHA:&#160;{{ senha }}</span>
@@ -22,35 +21,35 @@
         <div style="font-size: 14pt; text-align: center;">
             <div class="form-row col-12  d-flex justify-content-center">
                 IDENTIFICADOR DO AGENDAMENTO:&#160;{{ identificador}}
-            </div>	
+            </div>
             <div class="form-row col-12 d-flex justify-content-center">
                 NOME:&#160;{{ nome }}
             </div>
             <div class="form-row col-12  d-flex justify-content-center">
-                CPF/CNPJ:&#160;{{ formatarPessoas(cpfCnpj) }}
-            </div>
-            <div class="form-row col-12  d-flex justify-content-center">	
-                UNIDADE:&#160;{{ unidade }}
-            <div class="form-row col-12  d-flex justify-content-center">	    
-                {{ endereco }}
-            </div>    
+                CPF/CNPJ:&#160;{{ cpfCnpj }}
             </div>
             <div class="form-row col-12  d-flex justify-content-center">
-                DATA:&#160; {{ formatarDate(data) }}
-            </div>	
-            <div class="form-row col-12  d-flex justify-content-center">	
-                HORÁRIO:&#160; {{ horario }} 
-            </div>	
+                UNIDADE:&#160;{{ unidade }}
+            <div class="form-row col-12  d-flex justify-content-center">
+                {{ endereco }}
+            </div>
+            </div>
+            <div class="form-row col-12  d-flex justify-content-center">
+                DATA:&#160; {{ data | date: "dd/MM/yyyy"}}
+            </div>
+            <div class="form-row col-12  d-flex justify-content-center">
+                HORÁRIO:&#160; {{ horario }}
+            </div>
             <div class="form-row col-12  d-flex justify-content-center">
                 SERVIÇO:&#160; {{ servico }}
-            </div>	
+            </div>
             <div class="form-row col-12  d-flex justify-content-center">
                 DETALHAMENTO:&#160; {{ detalhamentoServico }}
             </div>
-            <div class="form-row col-12  d-flex justify-content-center">	
+            <div class="form-row col-12  d-flex justify-content-center">
                 STATUS:&#160;<span style="font-weight: bold;">{{ statusAgendamento }}</span>
             </div>
-            <div class="form-row col-12  d-flex justify-content-center">	
+            <div class="form-row col-12  d-flex justify-content-center">
                 PRIORIDADE:&#160;<span style="font-weight: bold;">{{ prioridade }}</span>
             </div>
         </div>
@@ -58,23 +57,23 @@
         <div class="form-row col-md-12">
             <div style="text-align: center; font-size: 12pt;" class="col-12">
                {{ resultado }}
-            </div>	
+            </div>
         </div>
-        <br/>	
+        <br/>
     </div>
     <div>
-        <button type="button" 
+        <button type="button"
                 class="btn btn-info mb-3"
                 (click)="imprimir()"
-        > 
-            <i class="fas fa-print"></i> Imprimir 
+        >
+            <i class="fas fa-print"></i> Imprimir
         </button>
-        <button type="button" 
+        <button type="button"
                 class="btn btn-warning mb-3 ml-1"
                 routerLink="/"
-        > 
+        >
             <i class="fas fa-backward"></i>&#160; Voltar
         </button>
-    </div>   
     </div>
-</div>  
+    </div>
+</div>
