--- a/src/app/modulos/login/login-form/login-form.component.html
+++ b/src/app/modulos/login/login-form/login-form.component.html
@@ -1,24 +1,24 @@
-<div class="col-12">
-    <div class="row mb-4">
-      <div class="col-md">
-        <h1 class="h5 pl-2" style="text-align: center;">
-          Faça seu login para agendamento aqui.
-        </h1>
-        </div>
-    </div>
-    <div class="form-group col-md-4" style="margin-left: 360px;">
-        <div *ngIf ="msgError"  class="alert alert-danger" role="alert">
-                Usuário ou senha não encontrado!
-            <a type="button" class="close" data-dismiss="alert" aria-label="Fechar">
-                <span aria-hidden="true">&times;</span>
-            </a>
-        </div>
+<div class="border-top">
+  <div class="d-flex justify-content-center mt-2">
+    <div class="col-md-7 alert alert-warning" role="alert">
+      <p style="text-align: center; font-size: 12pt; font-weight: bold;">
+        FAÇA SEU LOGIN PARA AGENDAMENTO, CONSULTA E AVALIAÇÃO AQUI!
+      </p>
+  </div>
+  </div>
+    <div class="d-flex justify-content-center mt-2">
+      <div *ngIf ="msgError"  class="alert alert-danger" role="alert">
+        Usuário ou Senha não encontrado!
+      <a type="button" class="close" data-dismiss="alert" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+      </a>
       </div>
+    </div>
     <form [formGroup]="loginForm">
         <div class="d-flex justify-content-center">
         <div class="card" style="box-shadow: 5px 5px 10px #000;">
              <div class="card-header">
-                Entrar com o CPF/CNPJ e Senha.
+                Entre com seu CPF/CNPJ e Senha.
                </div>
          <div class="card-body">
             <div class="form-group col-md-12">
