--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
                       </div>
                       <div class="d-flex justify-content-center">
                         <button type="button" class="btn btn-primary" routerLink="/usuario">
-                            <i class="fa fa-id-card-o" aria-hidden="true"></i>&#160; FAÇA SEU CADASTRO
+                          <i class="fas fa-address-card"></i>&#160; FAÇA SEU CADASTRO
                         </button>
                       </div>
                     </div>
