--- a/src/app/modulos/agendamento/agendamento-consulta/agendamento-consulta.component.html
+++ b/src/app/modulos/agendamento/agendamento-consulta/agendamento-consulta.component.html
@@ -29,7 +29,7 @@
         <td>{{ agendamento.senha }}</td>
         <td>
           <button type="button" class="btn btn-outline-info btn-sm" (click)="detalhar(agendamento.id)" data-toggle="modal" data-target=".bd-example-modal-lg">
-              Detalhar
+            <i class="fas fa-list-alt"></i>&nbsp;Detalhar
           </button>
         </td>
       </tr>
