--- a/src/app/modulos/agendamento/agendamento-list/agendamento-list.component.html
+++ b/src/app/modulos/agendamento/agendamento-list/agendamento-list.component.html
@@ -10,7 +10,7 @@
         <button type="button" (click)="consultar()" class="btn btn-info">
           <i class="fas fa-search"></i>&nbsp;Consultar
         </button>
-        <button type="button" routerLink="/" class="btn btn-success">
+        <button type="button" (click)="avaliar()" class="btn btn-success">
           <i class="far fa-thumbs-up"></i>&nbsp;Avaliar
         </button>
         <button type="button" routerLink="/" class="btn btn-warning float-right">
