--- a/src/app/modulos/agendamento/agendamento-consulta/agendamento-consulta.component.html
+++ b/src/app/modulos/agendamento/agendamento-consulta/agendamento-consulta.component.html
@@ -48,8 +48,12 @@
       </div>
       <div class="modal-body">
         <div class="apr">
+          <h6 style="color: blue; font-weight: bold;">IDENTIFICADOR</h6>
+          <h3>{{ identificador }}</h3>
+        </div>
+        <div class="apr">
           <h6 style="color: blue; font-weight: bold;">SENHA</h6>
-          <h1>{{ senha }}</h1>
+          <h3>{{ senha }}</h3>
         </div>
         <div class="apr">
             <h6 style="color: blue; font-weight: bold;">IDENTIFICAÇÃO</h6>
