--- a/src/app/modulos/login/login-form/login-form.component.html
+++ b/src/app/modulos/login/login-form/login-form.component.html
@@ -9,9 +9,9 @@
     <div class="d-flex justify-content-center mt-2">
       <div *ngIf ="msgError"  class="alert alert-danger" role="alert">
         Usuário ou Senha não encontrado!
-      <a type="button" class="close" data-dismiss="alert" aria-label="Fechar">
-          <span aria-hidden="true">&times;</span>
-      </a>
+        <a type="button" class="close" data-dismiss="alert" aria-label="Fechar">
+            <span aria-hidden="true">&times;</span>
+        </a>
       </div>
     </div>
     <form [formGroup]="loginForm">
@@ -42,55 +42,104 @@
                     Entrar&#160;<i class="fas fa-sign-in-alt"></i>
                 </button>
             </div>
-            <div class="form-group col-md-12">
+              <div class="form-group col-md-12">
+                <button type="button" class="btn btn-primary col-md-12" data-toggle="modal" data-target="#ModalSenha">
+                  Gerenciar a Senha&#160;<i class="fas fa-key"></i>
+                </button>
+              </div>
+              <div class="form-group col-md-12">
                 <button routerLink="/" class="btn btn-warning col-md-12">
                     <i class="fas fa-backward"></i>&nbsp;Voltar
                 </button>
               </div>
-                <div class="form-group col-md-12 d-flex justify-content-center" style="margin-top: 5px">
-                    <a routerLink="/">Alterar a senha</a>
-                </div>
-                <div class="form-group col-md-12 d-flex justify-content-center">
-                    <a routerLink="/">Esqueci a senha</a>
-                </div>
             </div>
             </div>
         </div>
         </form>
-    <div>
-    </div>
-  </div>
-  <div class="modal" id="myModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-        <!-- Modal Header -->
-        <div class="modal-header">
-            <h6 class="modal-title">Por gentileza, confira seus dados antes de confirmar a gravação das informações!</h6>
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-        </div>
-        <!-- Modal body -->
-        <div class="modal-body">
-        <div class="card">
-            <div class="card-header">
-
-             </div>
-        </div>
-            <div class="d-flex justify-content-center" style="color: red; font-weight: bold;">Dica! anote sua senha para evitar contratempos!</div>
-        </div>
-        <div class="d-flex justify-content-center">
-            <div class="col-md-12">
-              <div *ngIf ="mostrarMens" style="text-align: center;"  class="col-12 alert alert-success" role="alert">
-                <span> Resgistro salvo com sucesso!! </span>
+        <!-- Modal -->
+          <div class="modal fade" id="ModalSenha" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="TituloModalCentralizado">
+                    Gerenciador de Senhas
+                  </h5>
+                </div>
+                <div class="modal-body" style="font-weight: bold; margin-left: 120px;">
+                  Para alterar a senha.
+                </div>
+                <div class="d-flex justify-content-center">
+                  <div *ngIf ="tamanhoDaSenha"  class="alert alert-warning" role="alert">
+                    Senha deve conter 6 Dígitos!
+                    <a type="button" class="close" data-dismiss="alert" aria-label="Fechar">
+                        <span aria-hidden="true">&times;</span>
+                    </a>
+                  </div>
+                </div>
+                <form [formGroup]="loginAlteraForm">
+                  <div style="margin-left: 100px;">
+                    <div class="form-group col-md-8">
+                      <div class="input-group mb-3">
+                        <input id="idAtual" class="form-control" type="text" formControlName="cpfCnpj" placeholder="CPF/CNPJ"/>
+                      </div>
+                    </div>
+                    <div class="form-group col-md-8">
+                      <div class="input-group mb-3">
+                        <input id="senhaAtual" class="form-control" type="password" formControlName="senha" placeholder="SENHA ATUAL"/>
+                      </div>
+                    </div>
+                    <div class="form-group col-md-8">
+                      <div class="input-group mb-3">
+                        <input id="novaSenha" class="form-control" type="password"
+                              (input)="validarNovaSenha()"
+                              (blur)="validarDiferenca()"
+                              (focus)="validarDiferenca()"
+                              formControlName="novaSenha"
+                              placeholder="NOVA SENHA"/>
+                        <i class="fas fa-check" *ngIf="confereNovaSenha" style="margin-left: 10px; margin-top: 10px; color: green;"></i>
+                      </div>
+                    </div>
+                    <div class="col-md-12 mb-2" style="font-size: 10pt; margin-top: -16px; font-weight: bold;">
+                      Senha deve conter 6 dígitos.
+                    </div>
+                    <div class="form-group col-md-8">
+                      <div class="input-group mb-3">
+                        <input id="confereConfirmaNovasenha" class="form-control" type="password"
+                              (input)="validarConfereNovaSenha()"
+                              (blur)="validarDiferenca()"
+                              (focus)="validarDiferenca()"
+                              formControlName="confirmarNovaSenha"
+                              placeholder="CONFIRMA SENHA"/>
+                        <i class="fas fa-check" *ngIf="confereConfirmaNovaSenha" style="margin-left: 10px; margin-top: 10px; color: green;"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-row col-md-12 mt-2" style="color: blue; font-weight: bold; margin-left: 20px;">
+                    Caso esqueceu sua senha, entre em contato com a unidade mais próxima.
+                  </div>
+                  </form>
+                  <div class="col-md-12 d-flex justify-content-center">
+                  <div *ngIf ="msgErrorNovaSenha" style="text-align: center;"  class="col-10 alert alert-danger" role="alert">
+                    <span>Usuário ou senha não encontrado!</span>
+                    </div>
+                </div>
+                <div class="col-md-12 d-flex justify-content-center mt-2">
+                  <div *ngIf ="mostrarMens" style="text-align: center;"  class="col-10 alert alert-success" role="alert">
+                    <span> Senha alterado com sucesso!! </span>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" data-dismiss="modal">
+                  <i class="fas fa-window-close"></i>&nbsp;Fechar
+                </button>
+                  <button class="btn btn-success"  (click)="alterarSenha()" >
+                    <i class="fas fa-check-square"></i>&nbsp;Confirmar
+                  </button>
+                </div>
               </div>
             </div>
-        </div>
-        <!-- Modal footer -->
-        <div class="modal-footer">
-            <button type="submit" class="btn btn-primary">Confirmar</button>
-            <button type="button" class="btn btn-danger"  data-dismiss="modal">Fechar</button>
-        </div>
-        </div>
+          </div>
+          <!--Fim da modal-->
+      <div>
     </div>
-</div>
-
-
+  </div>
