--- a/src/app/modulos/cadastro-usuario/cadastro-usuario-form/cadastro-usuario-form.component.html
+++ b/src/app/modulos/cadastro-usuario/cadastro-usuario-form/cadastro-usuario-form.component.html
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="col-md-12" style="font-size: 10pt; margin-top: -17px;">
-                Senha deve conter 6 digitos.
+                Senha deve conter 6 dígitos.
           </div>
         </div>
       </div>
@@ -133,4 +133,3 @@
         </div>
     </div>
 </div>
-
